# soma

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.core  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 20240101_0000_initial_schema.py  20240102_0001_add_sleep_stage_biomarkers.py  20240103_0002_add_daylight_mobility_biomarkers.py  20240104_0003_add_vo2_max_biomarker.py  20240105_0004_add_body_composition_biomarkers.py  20260307_0001_add_user_id_multiuser_support.py  20260307_0002_enable_timescaledb_compression.py  20260405_0001_add_oauth_connections.py
api/: __init__.py  auth.py  cache.py  config.py  database.py  main.py  observability.py  pyproject.toml  rate_limit.py  requirements.txt  security.py  validation.py
api/integrations/whoop/: __init__.py  client.py  mapping.py  schemas.py  sync.py
api/jobs/: __init__.py  queue.py  tasks.py  worker.py
api/routers/: __init__.py  annotations.py  baselines.py  biomarkers.py  jobs.py  oauth.py  signals.py  status.py  sync.py  v1.py
api/routers/analysis/: __init__.py  _utils.py  advanced.py  body_composition.py  daylight.py  derived.py  holistic.py  proven.py  sleep.py  stability.py  vo2max.py
api/schemas/: __init__.py  advanced.py  base.py  body_composition.py  daylight.py  derived.py  holistic.py  proven.py  sleep.py  stability.py  vo2max.py
core/: Cargo.toml
core/sql/: init.sql
core/sql/migrations/: 002_clinical_biomarkers.sql  003_expanded_biomarkers.sql
core/src/: lib.rs  main.rs
core/src/ingest/: apple_health.rs  garmin.rs  generic_csv.rs  mod.rs  oura.rs
core/src/models/: biomarker.rs  mod.rs  signal.rs
core/src/pipeline/: compute.rs  hash.rs  mod.rs  normalize.rs  validate.rs
core/src/store/: timescale.rs
docs/: ARCHITECTURE.md  COACHING_LAYER.md  CONTEXT_ENGINE.md  DATA_INTEGRATION.md  HOLISTIC_INSIGHTS_IMPLEMENTATION.md  MOVEMENT_ENGINE.md  PHARMACOLOGICAL_CONTEXT.md  ROADMAP.md
science/: pyproject.toml
science/soma/: __init__.py  __main__.py  cli.py
science/soma/baseline/: __init__.py  model.py
science/soma/signals/: __init__.py  hrv.py
science/soma/statistics/: __init__.py  advanced.py  bayesian_intervention.py  body_composition.py  daylight.py  derived.py  holistic.py  interventions.py  proven.py  sleep.py  stability.py  vo2max.py
scripts/: README.md  analyze_apple_health.py  compute_features.py  deep_analysis.py  deep_dive_body_comp.py  deep_dive_correlations.py  deep_dive_part2.py  explore_correlations.py  explore_holistic.py  full_dashboard.py  health_analysis.py  phase_analysis.py  setup_oauth_tables.py  test_harmonic_wellness.py  test_holistic.py  validity_assessment.py  vector_wellness_test.py  vector_wellness_test_v2.py
scripts/exploration/: deep_dive.py  explore_data.py  rigorous_analysis.py  stability_analysis.py
scripts/maintenance/: compute_baselines.py
scripts/setup/: dev_setup.py  init_db.py  init_local.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_api_auth.py  test_api_health.py  test_api_versioning.py
tests/unit/: __init__.py  test_advanced.py  test_baseline.py  test_body_composition.py  test_cache.py  test_daylight.py  test_derived.py  test_holistic.py  test_jobs.py  test_proven.py  test_sleep.py  test_stability.py  test_vo2max.py
