[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soma"
version = "0.1.0"
description = "Open-source biosignal platform for continuous self-knowledge"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Soma Contributors" }
]
keywords = ["biosignals", "health", "hrv", "wearables", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core data processing
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.3",

    # Database
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",

    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Signal processing
    "neurokit2>=0.2",
    "antropy>=0.1.6",

    # Caching & Job Queue
    "redis>=5.0",
    "rq>=1.16",

    # Observability
    "structlog>=24.1",
    "prometheus-client>=0.19",

    # Utilities
    "python-dotenv>=1.0",
    "rich>=13.0",

]

# Note: Install science package separately with: pip install -e science/

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "httpx>=0.26",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
soma = "soma.cli:main"
soma-api = "api.main:app"

[project.urls]
Documentation = "https://github.com/soma/soma#readme"
Source = "https://github.com/soma/soma"
Issues = "https://github.com/soma/soma/issues"

[tool.hatch.build.targets.wheel]
packages = ["api", "science/soma"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["soma", "api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["api", "science/soma"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
