[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soma-api"
version = "0.1.0"
description = "Soma REST API for biosignal data and baselines"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    # Science layer dependencies
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.26",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
soma-api = "api.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"
