[package]
name = "soma-core"
version = "0.1.0"
edition = "2021"
description = "Soma core ingestion and processing pipeline"

[[bin]]
name = "soma-core"
path = "src/main.rs"

[lib]
name = "soma_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# XML parsing (Apple Health export)
quick-xml = { version = "0.31", features = ["serialize"] }

# CSV
csv = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
blake3 = "1"
hex = "0.4"
base64 = "0.21"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
